# pymxgraph

./: .gitignore  setup.cfg
src/mxgraph/: mxgraph.py
tests/: test_mxgraph.py
