[metadata]
name = pymxgraph
version = 0.0.1
author = Tim Hemel
author_email = tim@securesoftware.nl
description = library to read and write mxgraph (drawio) graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timhemel/pymxgraph
project_urls =
    Bug Tracker = https://github.com/timhemel/pymxgraph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    defusedxml
    Click
tests_require=
    pytest

[options.packages.find]
where = src

# [options.package_data]
# mxgraph=src/resources/*

# [options.entry_points]
# console_scripts =
#     mxgraph=mxgraph.cli:main

